# ewolf_automated

./: .gitattributes  .gitignore  ROADMAP.md
docs/: architecture.md  control_pipeline.md  lane_following_optimization_roadmap.md  topics_and_tf.md
launch/: run_camera_launch.py  run_lidar_launch.py
src/: trajectry_tracking_readme.md
src/Lidar_Stream/: test.rviz
src/Lidar_Stream/Scala2MK-sdk-aarch64/: CMakeLists.txt  COPYRIGHT.txt  package.xml
src/Lidar_Stream/Scala2MK-sdk-aarch64/cmake/: ScalaDecoderSdkConfig.cmake
src/Lidar_Stream/Scala2MK-sdk-aarch64/include/scala_decoder_sdk/: scala_decoder_parsing_sdk.h  scala_point_conversion_sdk.h  scala_socket_ethernet_sdk.h
src/Lidar_Stream/Scala2MK-sdk-aarch64/src/: README.txt  run_dashing_launch.py  run_eloquent_launch.py  run_foxy_launch.py  run_galactic_launch.py  scala_decoder_sdk_publisher_node.cpp  scala_decoder_sdk_publisher_node_2.cpp  scala_decoder_sdk_publisher_node_3.cpp  test.rviz
src/Lidar_Stream/cpp_lidar_conv/: CMakeLists.txt  package.xml
src/Lidar_Stream/cpp_lidar_conv/src/: Convert_Lidar.cpp
src/Lidar_Stream/ndi_sdk/: CMakeLists.txt  Readme_Install_NDI_Lib  package.xml
src/Lidar_Stream/ndi_sdk/lib/: libndi.so.5  libndi.so.5.6.0
src/Lidar_Stream/ndi_sdk/src/: Send_Kamera.cpp  Send_Lidar.cpp
src/Lidar_Stream/pcap_sender/: package.xml  setup.cfg  setup.py
src/Lidar_Stream/pcap_sender/pcap_sender/: pcap_sender_node.py
src/Lidar_Stream/pcl_ros2/: package.xml  setup.cfg  setup.py
src/Lidar_Stream/pcl_ros2/pcl_ros2/: pcl_to_image.py  pcl_to_image_3D.py
src/gps_odometry_package/: CMakeLists.txt
src/gps_odometry_package/src/: gps_odometry_node.cpp
src/imu_transform_package/: package.xml  setup.cfg  setup.py
src/imu_transform_package/imu_transform_package/: imu_transform.py
src/lane_boundary_transformer/: CMakeLists.txt  package.xml
src/lane_boundary_transformer/include/lane_boundary_transformer/: path_processing.hpp
src/lane_boundary_transformer/src/: lane_boundary_transformer.cpp  lane_boundary_transformer_bak.cpp
src/lane_boundary_transformer/test/: test_path_processing.cpp
src/lanedet_ros2/lanedet_ros2/: Test_lane.py  lanedet_node_helper.py  requirements.txt
src/lanedet_ros2/lanedet_ros2/lanedet.egg-info/: PKG-INFO
src/lanedet_ros2/lanedet_ros2/lanedet/models/heads/: condlane.py
src/lanedet_ros2/lanedet_ros2/tools/: lane_parameter.py
src/node_delay_package/: package.xml  setup.cfg  setup.py
src/node_delay_package/node_delay_package/: node_delay.py
src/realsense-ros/realsense2_camera/launch/: rs_color_imu.launch.py
src/robot_localization/params/: dual_ekf_navsat_example.yaml  ekf.yaml
src/speedgoat_package/: setup.py
src/speedgoat_package/launch/: speedgoat_ros2.launch.py
src/speedgoat_package/speedgoat_package/: control_utils.py  speedgoat_ros2_node.py  speedgoat_ros2_nodebak.py  speedgoat_ros2_nodebak0725.py
src/speedgoat_package/test/: test_control_utils.py
src/speedgoat_simulations/: package.xml  setup.cfg  setup.py
src/speedgoat_simulations/launch/: launch_simulation.py
src/speedgoat_simulations/speedgoat_simulations/: plotter_node.py  reference_path.py  reference_path_Tjunction.py  reference_path_leftcurve.py  reference_path_slalom.py  simulator_node.py
src/sys_time_package/: package.xml  setup.cfg  setup.py
src/sys_time_package/sys_time_package/: sys_time.py
src/udp_receiver/: CMakeLists.txt  package.xml
src/udp_receiver/src/: udp_receiver_node.cpp
src/vehicle_description/config/: map_params.yaml
src/vehicle_description/launch/: display.launch.py
src/vehicle_description/urdf/: estima_white.urdf  estima_white.urdf_old
src/vehicle_dynamic_pkg/: CMakeLists.txt  package.xml
src/vehicle_dynamic_pkg/src/: vehicle_dynamic_node.cpp
src/vehicle_msgs/vehicle_dynamic_msg/: CMakeLists.txt  package.xml
src/vehicle_msgs/vehicle_dynamic_msg/msg/: VehicleDynamic.msg
src/vehicle_odometry_package/: CMakeLists.txt
src/vehicle_odometry_package/src/: vehicle_odometry_node.cpp
src/video_to_image/video_to_image/: pub_video2img_helper.py
src/yolo3d_ros2/: setup.py
src/yolo3d_ros2/yolo3d_ros2/: Run_intel.py  model.onnx  save_to_trt.py  yolo3d.py  yolo3d_trt.py
src/yolo3d_ros2/yolo3d_ros2/torch_lib/: Dataset.py
src/yolo3d_ros2/yolo3d_ros2/weights/: epoch_10.pkl  get_weights.sh
src/yolo_trt_ros2/yolo_trt_ros2/: yolo_trt.py
src/yolo_trt_ros2/yolo_trt_ros2/utils/: visualization.py  yolo_with_plugins.py
src/yolo_trt_ros2/yolo_trt_ros2/yolo/: Readme.md  yolov4-416.onnx  yolov4-416.weights
