<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>scala_decoder_sdk_publisher</name>
    <version>1.2.0</version>
    <description>Example package containing ROS2 Scala decoder sdk node</description>
    <maintainer email="patrick.reichel@valeo.com">Patrick Reichel</maintainer>
    <license>
        This program is the confidential and proprietary product of Valeo Schalter und Sensoren GmbH.
        Any unauthorised use, reproduction or transfer of this program is strictly prohibited
        (subject to limited distribution and restricted disclosure only). All rights reserved.
    </license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>pcl_conversions</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
