<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_ros2</name>
  <version>0.0.0</version>
  <description>Konvertierung der unorganisierten Punktewolke in ein Bild</description>
  <maintainer email="ebel@fkfs.de">jetson</maintainer>
  <license>intern</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
